// 语法结构，使用pb3
 syntax = "proto3";
 import "google/protobuf/empty.proto";
 import "google/protobuf/timestamp.proto";
 import "google/protobuf/wrappers.proto";
  // 定义命名空间，一般是项目名或者解决方案名
 option csharp_namespace = "SmartLibrary.User.RpcService";
  // 定义服务的包
 package SmartLibrary.User;

 
 // 定义具体的服务
 service UserGrpcService {
    // 通过UserKey获取用户信息
    rpc GetUserByKey(google.protobuf.StringValue) returns (UserData){}
    // 通过条件查询用户列表
    rpc GetUserTableData(UserTableQuery) returns (UserPageData){}
    // 通过用户Id集合获取用户列表
    rpc GetUserListByIds(UserIdList) returns(UserListData){}
    // 获取馆员列表
    rpc GetManagerList(google.protobuf.Empty) returns (UserPageData){}
    // 获取用户类型字典
    rpc GetUserTypeList(SimpleTableQuery) returns (DictList){}
    // 获取用户组字典
    rpc GetUserGroupList(SimpleTableQuery) returns (DictList){}
    // 获取学院字典
    rpc GetUserCollegeList(SimpleTableQuery) returns (DictList){}
    //通过用户组获取用户
    rpc GetUserListByGroups(SimpleTableQuery) returns (UserPageData){}
    //通过用户类型获取用户
    rpc GetUserListByTypes(SimpleTableQuery) returns (UserPageData){}
 }

 //用户Id集合
 message UserIdList{
      repeated string Ids=1;
 }

 //字典
 message DictList{
      repeated DictItem Items=1;
 }

 //字典选项类型
 message DictItem{
      string Key=1;
      string Value=2;
 }

 //关键字查询
 message SimpleTableQuery{
    int32 PageIndex=1;
    int32 PageSize=2;
    string KeyWord=3;
    repeated string GroupIds=4;
    repeated string UserTypeCodes=5;
 }

 //用户查询基类
 message UserTableQuery {
    int32 PageIndex=1;
    int32 PageSize=2;
    string KeyWord=3;
 }

 message UserData{
     string Key = 1;
     string Name = 2;
     string NickName=3;
     string StudentNo=4;
     string Gender=5;
     string Photo=6;
     string Unit=7;
     string Edu=8;
     string Title=9;
     string Depart=10;
     string DepartName=11;
     string College=12;
     string CollegeName=13;
     string CollegeDepart=14;
     string CollegeDepartName=15;
     string Major=16;
     string Grade=17;
     string Class=18;
     string Type=19;
     string TypeName=20;
     int32 Status=21;
     string ShowStatus=22;
     string IdCard=23;
     string Phone=24;
     string Email=25;
     int32 SourceFrom=26;
     string ShowSourceFrom=27;
     string CardNo=28;
     google.protobuf.Int32Value CardStatus=29;
     string ShowCardStatus=30;
     google.protobuf.Timestamp Birthday=31;
     google.protobuf.Timestamp LeaveTime=32;
     google.protobuf.Timestamp FirstLoginTime=33;
     google.protobuf.Timestamp LastLoginTime=34;
     string Addr=35;
     string AddrDetail=36;
     google.protobuf.Timestamp CardIssueDate=37;
     google.protobuf.Timestamp CardExpireDate=38;
     repeated string GroupIds=39;
     string AsyncReaderId=40;
     bool IsStaff=41; 
 }

 //用户表格数据
 message UserPageData{
    message UserListItem {
     string Key = 1;
     string Name = 2;
     string NickName=3;
     string StudentNo=4;
     string Gender=5;
     string Photo=6;
     string Unit=7;
     string Edu=8;
     string Title=9;
     string Depart=10;
     string DepartName=11;
     string College=12;
     string CollegeName=13;
     string CollegeDepart=14;
     string CollegeDepartName=15;
     string Major=16;
     string Grade=17;
     string Class=18;
     string Type=19;
     string TypeName=20;
     int32 Status=21;
     string ShowStatus=22;
     string IdCard=23;
     string Phone=24;
     string Email=25;
     int32 SourceFrom=26;
     string ShowSourceFrom=27;
     string CardNo=28;
     google.protobuf.Int32Value CardStatus=29;
     string ShowCardStatus=30;
     google.protobuf.Timestamp Birthday=31;
     google.protobuf.Timestamp LeaveTime=32;
     google.protobuf.Timestamp FirstLoginTime=33;
     google.protobuf.Timestamp LastLoginTime=34;
    }
    int32 TotalCount = 1;
    
    repeated UserListItem Items = 2;
 }

 //用户表格数据
 message UserListData{
    repeated UserPageData.UserListItem Items = 2;
 }

